<resources>
    <string name="app_name">GardenLink</string>
    <string name="connexion_activity">Connexion</string>
    <string name="connexion_title">Bienvenue ! </string>
    <string name="connexion_SubTitle">Merci de vous connecter</string>
    <string name="login_hint">Adresse E-Mail</string>
    <string name="password_hint">Mot de passe</string>
    <string name="forgottenPassword">Mot de passe oublié</string>
    <string name="connectButton">SE CONNECTER</string>
    <string name="signUpButton">S\'INSCRIRE</string>
    <string name="forgotten_password_activity">Mot de passe oublié</string>
    <string name="forgotten_password_title">Mot de passe oublié ? </string>
    <string name="forgotten_password_SubTitle">Entrez l\'adresse E-Mail de votre compte pour récupérer votre mot de passe</string>
    <string name="email_hint">Adresse E-Mail</string>
    <string name="forgotten_password_send_request">Envoyer</string>
    <string name="home">Accueil</string>
    <string name="myAccount">Mon Compte</string>
    <string name="wallet">Mon Porte-Monnaie</string>
    <string name="messaging">Messagerie</string>
    <string name="myLeasing">Mes Locations</string>
    <string name="myLands">Mes Terrains</string>
    <string name="signOut">Se Déconnecter</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="name">Nom Prénom</string>
    <string name="signUp_name">Nom</string>
    <string name="signUp_activity">Inscription</string>
    <string name="signUp_firstName">Prénom</string>
    <string name="signUp_phone">N° de téléphone</string>
    <string name="signUp_email">Adresse e-mail</string>
    <string name="signUp_password">Mot de passe</string>
    <string name="signUp_passwordAgain">Confirmer mot de passe</string>
    <string name="signUp_captcha">Je ne suis pas un robot</string>
    <string name="mandatory">Obligatoire</string>
    <string name="signUp_newsletter">Inscription à la newsletter de GardenLink</string>
    <string name="signUp_signUpButton">S\'INSCRIRE</string>
    <string name="signUp_not_equals_password">Erreur: les mots de passe entrés ne sont pas identiques</string>
    <string name="signUp_subTitle">Créez un compte pour accéder à toute les fonctionnalités de GardenLink !</string>
    <string name="signUp_title">Bonjour !</string>
    <string name="signUp_valid">Valide!</string>
    <string name="Name">Nom</string>
    <string name="FirstName">Prénom</string>
    <string name="Login">Nom d\'utilisateur</string>
    <string name="Password">Mot de passe</string>
    <string name="PasswordField">Password</string>
    <string name="Mail">Adresse E-mail</string>
    <string name="Phone">Téléphone</string>
    <string name="NewsLetter">Inscription a la NewsLetter</string>
    <string name="Modification">Modification</string>
    <string name="save">SAUVEGARDER</string>
    <string name="deleteAccount">SUPPRIMER MON COMPTE</string>
    <string name="search_hint">Rechercher</string>
    <string name="searchResultActivity">Résultats de recherche</string>
    <string name="nextPageResults"><u>Suivant</u></string>
    <string name="previousPageResults"><u>Précédent</u></string>
    <string name="postAnnouncement_image_description">Image</string>
    <string name="postAnnouncement_title_label">Titre de l\'annonce</string>
    <string name="postAnnouncement_price_label">Prix / mois</string>
    <string name="postAnnouncement_areaSize_label">Superficie</string>
    <string name="postAnnouncement_min_duration_label">Durée minimal de la location (en mois)</string>
    <string name="postAnnouncement_description_label">Desription:</string>
    <string name="postAnnouncement_localization_label">Localisation:</string>
    <string name="postAnnouncement_streetNumber_label">Numéro de rue</string>
    <string name="postAnnouncement_streetName_label">Nom de rue</string>
    <string name="postAnnouncement_postalCode_label">Code postal</string>
    <string name="postAnnouncement_city_label">Ville</string>
    <string name="postAnnouncement_orientation_label">Orientation:</string>
    <string name="postAnnouncement_orientation_north">Nord</string>
    <string name="postAnnouncement_orientation_south">Sud</string>
    <string name="postAnnouncement_orientation_east">Est</string>
    <string name="postAnnouncement_orientation_west">Ouest</string>
    <string name="postAnnouncement_orientation_northEast">Nord-Est</string>
    <string name="postAnnouncement_orientation_northWest">Nord-Ouest</string>
    <string name="postAnnouncement_orientation_southWest">Sud-Ouest</string>
    <string name="postAnnouncement_orientation_southEast">Sud-Est</string>
    <string name="postAnnouncement_earthType_label">Type de sol:</string>
    <string name="postAnnouncement_earthType_argileux">Argileux</string>
    <string name="postAnnouncement_earthType_sableux">Sableux</string>
    <string name="postAnnouncement_earthType_tourbeux">Tourbeux</string>
    <string name="postAnnouncement_earthType_humifere">Humifère</string>
    <string name="postAnnouncement_earthType_silicieuse">Silicieuse</string>
    <string name="postAnnouncement_earthType_calcaire">Calcaire</string>
    <string name="postAnnouncement_waterProvided_label">Eau fournie:</string>
    <string name="postAnnouncement_yes">Oui</string>
    <string name="postAnnouncement_no">Non</string>
    <string name="postAnnouncement_equipmentProvided_label">Equipement fournis:</string>
    <string name="postAnnouncement_directAccess_label">Accès direct au terrain:</string>
    <string name="postAnnouncement_reinitcriteriaButton">Réinitialiser les critères</string>
    <string name="postAnnouncement_postButton">POSTER</string>
    <string name="postAnnouncement_activity">Poster une annonce</string>
    <string name="request_send">Requête envoyée.</string>
    <string name="mail_request_timeout">La requête au serveur d\'emails a expiré, veuillez ré-essayer.</string>
    <string name="update_request_timeout">La requête au serveur a expiré. Les modifications n\'ont pas été sauvergardées.</string>
    <string name="confirm_changes">Voulez-vous confirmer les changements ?</string>
    <string name="changes">Les changements seront appliqués à la validation.</string>
    <string name="confirm">Valider</string>
    <string name="cancel">Retour</string>
    <string name="delete_account_dialog">Etes-vous sur de vouloir supprimer votre compte ?</string>
    <string name="delete">Supprimer</string>
    <string name="error">Erreur !</string>
    <string name="changes_succed">La modification s\'est déroulée sans encombre.</string>
    <string name="signout_dialog">Voulez-vous vraiment vous déconnecter ?</string>
    <string name="confirm_demand">Confirmation de la demande.</string>
    <string name="demand_pending_validation">Votre annonce a bien été pris en compte. Elle sera vérifiée par nos services sous peu.</string>
    <string name="ok">OK</string>
    <string name="searching">Recherche en cours...</string>
    <string name="no_result">Aucun résultat. Veuillez réessayer avec des critères moins restrictifs.</string>
    <string name="search_error">Erreur lors de la recherche.</string>
    <string name="json_error">Erreur Json :</string>
    <string name="myDemand">Mes Demandes</string>
    <string name="accept_request">Vous avez accepté la demande de</string>
    <string name="on_land">sur votre Jardin :</string>
    <string name="decline_request">Vous avez refusé la demande de</string>
    <string name="show_details">Vous voulez voir les détails de  l\'annonce :</string>
    <string name="location_in_progress">Localisation en cours...</string>
    <string name="gps_off">GPS désactivé.</string>
    <string name="gps_off_message">Votre GPS semble être désactivé, veuillez l\'activer pour bénéficier des services de localisation.</string>
    <string name="location_failed">Erreur : Aucune Localisation trouvée.</string>
    <string name="location_succed">Localisation terminée !</string>
    <string name="unavailable">Localisation indisponible.</string>
    <string name="postAnnouncement_max_duration_label">Durée maximal de la location (en mois)</string>
    <string name="walletTitle">Recharger son compte</string>
    <string name="walletRemainingCredit">Crédit actuel : </string>
    <string name="detailAnnouncement_activity">Détail de l\'annonce</string>
    <string name="yes">oui</string>
    <string name="no">non</string>
    <string name="detailAnnouncement_delete">SUPPRIMER</string>
    <string name="report_announcement">Signaler cette annonce</string>
    <string name="detailAnnouncement_hire">LOUER</string>
    <string name="comment">Commentaire</string>
    <string name="confirmHireDialog_duration_label">Durée de location:</string>
    <string name="confirmHireDialog_price_label">Prix / mois:</string>
    <string name="confirmHireDialog_initalBalance_label">Solde initial:</string>
    <string name="confirmHireDialog_totalPrice_label">Prix total:</string>
    <string name="confirmHireDialog_resultBalance_label">Solde restant:</string>
    <string name="confirmHireDialog_messagingButton">CONTACTER</string>
    <string name="confirmHireDialog_cancelButton">FERMER</string>
    <string name="detailAnnouncement_hireDialog_title">Demande de location</string>
    <string name="hireDialog_errorLimit_message">Le temps de location est hors des limites de l\'annonce.</string>
    <string name="hireDialog_balanceTooLow_message">Votre solde est insufisant, veuillez recharger et refaire la demande.</string>
    <string name="hireDialog_askButton">DEMANDER</string>
    <string name="hireDialog_CancelButton">ANNULER</string>
    <string name="hireDialog_selectDateDialog_title">Selectionner une date</string>
    <string name="detailAnnouncement_hireNotAvailable_message">Trop tard! Cette annonce est déjà réservée.</string>
    <string name="detailAnnouncement_deleteDialog_title">Etes-vous sur de vouloir supprimer cette annonce ?</string>
    <string name="detailAnnouncement_deleteDialog_error">Ce jardin est réservé. Veuillez attendre la conclusion du contrat avant de retirer l\'annonce.</string>
    <string name="detailAnnouncement_confirmDelete">Ce jardin a bien été supprimé</string>
    <string name="detailAnnouncement_postFail_message">Erreur! Impossible de poster la demande.</string>
</resources>
